--- a/package.json
+++ b/package.json
@@ -1,38 +1,22 @@
 {
-  "name": "stream-to-promise",
-  "version": "1.1.1",
-  "description": "Convert streams (readable or writable) to promises",
+  "name": "stream-to-promise-agnostic",
+  "version": "1.0.0",
+  "description": "Convert streams (readable or writable) to promises using your own standard Promise library.",
   "main": "index.js",
-  "scripts": {
-    "test": "standard && mocha test.js"
-  },
   "repository": {
     "type": "git",
-    "url": "git://github.com/bendrucker/stream-to-promise.git"
+    "url": "git://github.com/electricessence/stream-to-promise.git"
   },
   "keywords": [
     "stream",
-    "promise"
+    "promise",
+    "agnostic",
+    "typscript"
   ],
-  "author": "Ben Drucker <bvdrucker@gmail.com> (http://www.bendrucker.me)",
+  "author": "electricessence <npm@electrified.net>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/bendrucker/stream-to-promise/issues"
-  },
-  "homepage": "https://github.com/bendrucker/stream-to-promise",
-  "dependencies": {
-    "bluebird": "~3.0.6",
-    "stream-to-array": "~2.3.0"
-  },
-  "devDependencies": {
-    "chai": "^3.4.1",
-    "chai-as-promised": "^5.1.0",
-    "delayed-stream": "^1.0.0",
-    "mocha": "^2.3.4",
-    "rimraf": "^2.4.4",
-    "standard": "^5.4.1"
-  },
   "files": [
-    "index.js"
+    "index.js",
+    "StreamToPromise.js"
   ]
 }
